Fixed index.html links

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <div style="">5.0.0</div>
                     </td>
                     <td class="apidoc">
-                                            <a href="5.0.0/apidocs">
+                                            <a href="5.0.0/apidocs/hdfs-apidoc.html">
                             <div><i class="fa fa-book fa-lg"></i></div>
                         </a>
                     </td>
