--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
     </div>
 </div>
-<script src="http://codepen.io/assets/libs/fullpage/jquery.js">
+<script src="http://code.jquery.com/jquery-latest.min.js">
 </script>
 <script type="text/javascript" src="index.js">
 </script>
